<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Поле с названием -->

    <!-- Поля ввода значения времени -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textTitleApp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/timeInput1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/textInputTimeOne"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/timeInput2"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <EditText
        android:id="@+id/timeInput2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/textInputTimeTwo"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toEndOf="@id/timeInput1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <!-- Кнопка вычитания -->
    <Button
        android:id="@+id/subtractButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textTimePlus"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintTop_toBottomOf="@id/timeInput1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/addButton"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"/>

    <!-- Кнопка сложения -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textTimeMinus"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintTop_toBottomOf="@id/timeInput2"
        app:layout_constraintStart_toEndOf="@id/subtractButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.45"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"/>

    <!-- Поле вывода результата -->
    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textResult"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/subtractButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Поле для вывода сообщений -->
    <TextView
        android:id="@+id/messageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/resultText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
